project_fl-a/test/parser/bad/c_bad_1.py
# RUN: %chocopy-llvm %s 2>&1 | FileCheck %s.err

if True:
    x = 1 
  y = 2

